Fix Firefox height on mobile

--- a/src/assets/styles/normolize.scss
+++ b/src/assets/styles/normolize.scss
@@ -2,6 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
   font-family: 'Open sans', Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
